--- a/src/styles.scss
+++ b/src/styles.scss
@@ -441,3 +441,11 @@ table {
     background-color: $color-success;
     color: #fff;
 }
+
+.mat-icon-success {
+    color: $color-success;
+}
+
+label.mat-checkbox-layout {
+    margin-bottom: 0px;
+}
