--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -44,6 +44,7 @@ $color-warning:#bd2227;
         background-color: #fff;
         width: 100%;
         margin-bottom: 15px;
+        overflow: hidden;
 
         & .orderBox_header{
             display: flex;
@@ -101,5 +102,49 @@ $color-warning:#bd2227;
             background-color: rgba(247, 55, 24, 0.55);
             color: #000;
         }
+        &.rejected {
+            background-color: rgba(191, 198, 255, 0.21);
+            // background-image: linear-gradient(45deg, rgba(255, 35, 0, 0.4) 39%, rgba(255, 35, 0, 0.25) 52%, rgba(255, 35, 0, 0.4) 63%);
+            // animation: emergency 3s 0 infinite  ease-in-out;
+            // background-size: 200%;
+            // background-position: 0 0;
+            // animation-name: emergency;
+            // animation-duration: 3s;
+            // animation-iteration-count: infinite;
+        }
+        &.delayed {
+            background-color: rgba(191, 198, 255, 0.21);
+            // background-color:transparent;
+            // background-image: linear-gradient(to top, rgba(247, 55, 24, 0.24),rgba(191, 198, 255, 0.21)) ;
+        }
+
+        & .error_wrapper {
+            background-color: $color-warning;
+            color: #fff;
+            margin: 10px -15px -25px;
+            padding: 10px 15px;
+            font-size: 12px;
+
+            & p{
+                line-height: 1;
+                margin-bottom: 10px;
+
+                &:not(:last-child)  {
+                    margin-bottom: 5px;
+                }
+            }
+        }
+    }
+}
+
+@keyframes emergency {
+    0% {
+        background-position: 163% 0;
+    }
+    50% {
+        background-position: -65% 0;
+    }
+    100% {
+        background-position: 163% 0;
     }
 }
