--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -294,9 +294,25 @@
 </form> -->
 
 <form [formGroup]="form">
-    <div class="page_header d-flex mb-10">
+    <div class="page_header d-flex align-items-center justify-content-between mb-10">
         <h2 class="header_title" *ngIf="!orderId">New Order</h2>
         <h2 class="header_title" *ngIf="orderId">Edit Order : {{orderId}}</h2>
+
+        <div *ngIf="orderData?.rejectedCount > 0 && orderData?.orderStatus == 'new'" class="status_box red">
+            Items Rejected
+        </div>
+        <div *ngIf="orderData?.rejectedCount <= 0 && (orderData?.timeDif.h * 60 + orderData?.timeDif.i) > 20 && orderData?.orderStatus == 'new'" class="status_box red">
+            Got Delayed
+        </div>
+        <div *ngIf="orderData?.rejectedCount <= 0 && (orderData?.timeDif.h * 60 + orderData?.timeDif.i) <= 20 && orderData?.orderStatus == 'new'" class="status_box warn">
+            On Going
+        </div>
+        <div *ngIf="orderData?.orderStatus == 'cancelled'" class="status_box red">
+            Cancelled
+        </div>
+        <div *ngIf="orderData?.orderStatus == 'completed'" class="status_box">
+            Completed
+        </div>
     </div>
 
     <div class="d-flex mb-20">
@@ -308,7 +324,7 @@
         </mat-form-field>
         <mat-chip-list aria-label="Fish selection">
             <ng-container *ngFor="let item of orderTypeList;">
-                <mat-chip *ngIf="item.isActive" color="primary" [selected]="item.id == form.get('orderType').value" (click)="changeOrderType(item.id)">{{ item.orderType }}</mat-chip>
+                <mat-chip *ngIf="item.isActive" color="primary" [selected]="item.id == form.get('orderType').value" (click)="changeOrderType(item.id, 'button')">{{ item.orderType }}</mat-chip>
             </ng-container>
           </mat-chip-list>
           <div class="ml-auto" *ngIf="selectedOrderType?.tableRequired">
@@ -367,82 +383,96 @@
                     <p class="title">Total Amount</p>
                     <span class="value_section">{{ form.get('packingCharge').value | currency }}</span>
                 </div> -->
-                <div class="billing_strip">
-                    <p class="title">CGST(6%)</p>
+                <div class="billing_strip" *ngIf="!form.get('taxDisabled').value">
+                    <p class="title">CGST <small class="text-muted">({{ ((form.get('taxPercent').value > 0)?(form.get('taxPercent').value/2):0) | number : '2.2' }}%)</small></p>
                     <span class="value_section">{{ form.get('cgst').value | currency }}</span>
                 </div>
-                <div class="billing_strip">
-                    <p class="title">SGST(6%)</p>
+                <div class="billing_strip" *ngIf="!form.get('taxDisabled').value">
+                    <p class="title">SGST <small class="text-muted">({{ ((form.get('taxPercent').value > 0)?(form.get('taxPercent').value/2):0) | number : '2.2' }}%)</small></p>
                     <span class="value_section">{{ form.get('sgst').value | currency }}</span>
                 </div>
                 <div class="billing_strip">
                     <p class="title">Grand Total</p>
                     <span class="value_section">{{ form.get('orderAmount').value | currency }}</span>
                 </div>
+
+                <hr>
+                <div class="text-center">
+                    <button mat-stroked-button color="primary" class="my-10 ew-mn-120 mx-auto" 
+                        *ngIf="form.get('orderStatus').value != 'completed' && form.get('orderStatus').value != 'cancelled' && !blockForms"  
+                        (click)="saveOrder('confirm')">Save</button>
+                </div>
+
             </div>
             <div class="action_wrapper">
-                <button mat-raised-button color="success" class="w-100" type="button"
-                    *ngIf="form.get('orderStatus').value != 'completed' && form.get('orderStatus').value != 'cancelled'"  
+                <button mat-raised-button color="success" class="w-100 rounded-0" type="button"
+                    *ngIf="form.get('orderStatus').value != 'completed' && form.get('orderStatus').value != 'cancelled' && !blockForms"  
                     (click)="saveOrder('complete')">Complete</button>
 
-                <button mat-raised-button color="primary" class="w-100" 
-                    *ngIf="form.get('orderStatus').value != 'completed' && form.get('orderStatus').value != 'cancelled'"  
-                    (click)="saveOrder('confirm')">Save</button>
 
-                <button mat-raised-button color="accent" *ngIf="form.get('orderStatus').value == 'completed'" class="w-100" (click)="printOrder()">Print</button>
+                <button mat-raised-button color="accent" *ngIf="form.get('orderStatus').value == 'completed'" class="w-100 rounded-0" (click)="printOrder()">Print</button>
 
                 <button mat-raised-button color="warn" 
-                    *ngIf="orderId && form.get('orderStatus').value != 'completed' && form.get('orderStatus').value != 'cancelled'" 
-                    class="w-100" (click)="saveOrder('cancel')">Cancel</button>
+                    *ngIf="orderId && form.get('orderStatus').value != 'completed' && form.get('orderStatus').value != 'cancelled' && !blockForms" 
+                    class="w-100 rounded-0" (click)="saveOrder('cancel')">Cancel</button>
             </div>
         </div>
         <div class="order_items">
             <div class="page_header d-flex mb-4">
                 <h2 class="header_title">Items</h2>
                 <div class="ml-auto">
-                    <button mat-button color="accent" type="button" *ngIf="items['controls'].length > 0 && form.get('orderStatus').value != 'completed' && form.get('orderStatus').value != 'cancelled'" (click)="serveOrderItem()">
+                    <button mat-button color="accent" type="button" *ngIf="items['controls'].length > 0 && !blockForms" (click)="serveOrderItem()">
                         <mat-icon>done_all</mat-icon>
                         Serve Items
                     </button>
-                    <button mat-button color="primary" *ngIf="form.get('orderStatus').value != 'completed' && form.get('orderStatus').value != 'cancelled'" type="button" (click)="addNewOrderItem()">
+                    <button mat-button color="primary" *ngIf="!blockForms" type="button" (click)="addNewOrderItem()">
                         <mat-icon>add</mat-icon>
                         Add Item
                     </button>
                 </div>
             </div>
             <ng-container *ngFor="let item of items['controls'];let i=index;">
-                <div class="order_item_card" *ngIf="!item.get('deletedFlag').value">
-                    <span class="order_item_card_strip" *ngIf="item.get('isParcel').value">Parcel</span>
-                    <div class="img_item">
-                        <img *ngIf="item.get('featuredImage').value" [src]=" url + item.get('featuredImage').value" alt="">
-                        <img *ngIf="!item.get('featuredImage').value" src="/assets/images/food.jpg" alt="">
+                <div class="row no-gutters order_item_wrapper">
+                    <div class="col-auto">
+                        <span class="order_item_card_strip" *ngIf="item.get('isParcel').value">Parcel</span>
+                        <div class="img_item">
+                            <img *ngIf="item.get('featuredImage').value" [src]=" url + item.get('featuredImage').value" alt="">
+                            <img *ngIf="!item.get('featuredImage').value" src="/assets/images/food.jpg" alt="">
+                        </div>
                     </div>
-                    <div class="order-details">
-                        <p class="product_name">{{ item.get('productName').value }}</p>
-                        <p class="product_price">
-                            <small>Price: &nbsp;&nbsp;&nbsp;</small>
-                            <span>{{ item.get('price').value | currency  }}</span>
-                        </p>
-                        <p class="product_price" *ngIf="item.get('isParcel').value">
-                            <small>Packaging charges: &nbsp;&nbsp;&nbsp;</small>
-                            <span>{{ item.get('packagingCharges').value | currency  }}</span>
-                        </p>
-                        <p class="product_price">
-                            <small>Total: &nbsp;&nbsp;&nbsp;</small>
-                            <span>{{ item.get('totalPrice').value | currency }}</span>
-                        </p>
-                    </div>
-                    <div class="action_menu">
-                        <div class="input-group mb-0 number_input">
-                            <div class="input-group-prepend">
-                                <button class="btn btn-outline-secondary" type="button" (click)="handleNumberControl(item, 'prev', i)">-</button>
+                    <div class="col">
+                        <div class="order_item_card" *ngIf="!item.get('deletedFlag').value">
+                            <div class="order-details">
+                                <p class="product_name">{{ item.get('productName').value }}</p>
+                                <p class="product_price">
+                                    <small>Price: &nbsp;&nbsp;&nbsp;</small>
+                                    <span>{{ item.get('price').value | currency  }}</span>
+                                </p>
+                                <p class="product_price" *ngIf="item.get('isParcel').value">
+                                    <small>Packaging charges: &nbsp;&nbsp;&nbsp;</small>
+                                    <span>{{ item.get('packagingCharges').value | currency  }}</span>
+                                </p>
+                                <p class="product_price">
+                                    <small>Total: &nbsp;&nbsp;&nbsp;</small>
+                                    <span>{{ item.get('totalPrice').value | currency }}</span>
+                                </p>
+                                <button type="button" mat-stroked-button color="warn" class="mt-15" *ngIf="item.get('productionRejectedQuantity').value > 0" (click)="handleRejectedItems(item)">Remove Rejected</button>
                             </div>
-                            <input type="text" class="form-control" [formControl]="item.get('quantity')" (keyup)="handleNumberControl(item, 'text', i)" digitOnly>
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button" (click)="handleNumberControl(item, 'next', i)">+</button>
+                            <div class="action_menu">
+                                <div class="input-group mb-0 number_input">
+                                    <div class="input-group-prepend">
+                                        <button class="btn btn-outline-secondary" type="button" (click)="handleNumberControl(item, 'prev', i)">-</button>
+                                    </div>
+                                    <input type="text" class="form-control" [formControl]="item.get('quantity')" (keyup)="handleNumberControl(item, 'text', i)" digitOnly>
+                                    <div class="input-group-append">
+                                        <button class="btn btn-outline-secondary" type="button" (click)="handleNumberControl(item, 'next', i)">+</button>
+                                    </div>
+                                </div>
+                                <p class="text-success mt-2 mb-0">Served: <b>{{ item.get('servedItems').value }}</b></p>
+                                <p class="text-accent mb-0">Kitchen: <b>{{ item.get('quantity').value - item.get('servedItems').value - item.get('productionRejectedQuantity').value}}</b></p>
+                                <p class="text-danger mb-0">Rejected: <b>{{ item.get('productionRejectedQuantity').value }}</b></p>
                             </div>
                         </div>
-                        <p class="text-success mt-2">Served: <b>{{ item.get('servedItems').value }}</b></p>
                     </div>
                 </div>
             </ng-container>
