--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -61,6 +61,16 @@
             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="bearer">
+            <th mat-header-cell *matHeaderCellDef class="ew-130"> Bearer </th>
+            <td mat-cell *matCellDef="let element"> {{element.bearer.firstName}} {{ element.bearer.lastName }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="tables">
+            <th mat-header-cell *matHeaderCellDef class="ew-130"> Tables </th>
+            <td mat-cell *matCellDef="let element"> <ng-container *ngFor="let t of element.order_tables; let ti=index;let last=last">{{ t.table.tableId }} <ng-container *ngIf="!last">, </ng-container></ng-container> </td>
+        </ng-container>
+
         <ng-container matColumnDef="orderAmount">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Order Amount </th>
             <td mat-cell *matCellDef="let element"> {{element.orderAmount| currency:'':''}} </td>
@@ -77,7 +87,7 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight': (row.orderStatus == 'new' && (row.rejectedCount > 0 || (row.timeDif.h * 60 + row.timeDif.i) > 20))}"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10"></mat-paginator>
 </div>
