--- a/src/app/kitchen/layout/kitchen-header/kitchen-header.component.html
+++ b/src/app/kitchen/layout/kitchen-header/kitchen-header.component.html
@@ -6,10 +6,9 @@
         <div class="header_navigation">
             <ul>
                 <li class="mr-20">
-                    <button mat-button [matMenuTriggerFor]="menu">Kitchen 1</button>
-                    <mat-menu #menu="matMenu">
-                      <button mat-menu-item>Item 1</button>
-                      <button mat-menu-item>Item 2</button>
+                    <button mat-button [matMenuTriggerFor]="menu">{{ _kitchen.kitchen_details?.kitchenTitle }}</button>
+                    <mat-menu #menu="matMenu" >
+                      <button mat-menu-item type="button" *ngFor="let item of this.branchDetails?.kitchens;" (click)="onChangeKitchen(item)">{{ item.kitchenTitle }}</button>
                     </mat-menu>
                 </li>
                 <li>
