--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
                 <div class="col-md-6 col-sm-12" *ngFor="let item of ongoingorders;" [class.order-0]="item.rejectedCount > 0"  [class.order-1]="(item.timeDif.h * 60 + item.timeDif.i) > 20 && item.rejectedCount <= 0"  [class.order-2]="(item.timeDif.h * 60 + item.timeDif.i) <= 20 && item.rejectedCount <= 0">
                     <div class="orderBox on_table" [class.rejected]="item.rejectedCount > 0" [class.delayed]="(item.timeDif.h * 60 + item.timeDif.i) > 20 && item.rejectedCount <= 0">
                         <div class="orderBox_header">
-                            <h4 class="order_number">#{{ item.id }}</h4>
+                            <h4 class="order_number">#{{ item.id }} <span class="order_type">{{ item.order_type.orderType }}</span></h4>
                             <span class="order_time">
                                 
                                 <svg class="mr-5 mb-2" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" width="14px" height="14px" viewBox="0 0 128 128" xml:space="preserve"><g><path d="M63.88 0A63.88 63.88 0 1 1 0 63.88 63.88 63.88 0 0 1 63.88 0zm0 11.88a52 52 0 1 1-52 52 52 52 0 0 1 52-52zm0 46.2a5.8 5.8 0 1 1-5.8 5.8 5.8 5.8 0 0 1 5.8-5.8z" fill-rule="evenodd" fill="#aaaaaa" fill-opacity="1"/><path d="M58.25 5h11.3v59h-11.3V5z" fill="#aaaaaa" fill-opacity="1"/><animateTransform attributeName="transform" type="rotate" from="0 64 64" to="360 64 64" dur="2700ms" repeatCount="indefinite" *ngIf="true"></animateTransform></g></svg>
