--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,6 +111,10 @@ mat-form-field{
             padding-bottom: 0px;
         }
     }
+
+    &.order-calc .mat-form-field-wrapper .mat-form-field-suffix {
+        top: -4px;
+    }
 }
 
 .right_sidePannel{
