--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,6 +127,7 @@ mat-form-field{
     height: 100%;
     z-index: 3;
     box-shadow: -2px 0px 12px rgba(#000, 0.2);
+    overflow: auto;
     &.active{
         right: 0px;
     }
