--- a/src/theme-palette.scss
+++ b/src/theme-palette.scss
@@ -93,7 +93,7 @@ $md-frontexpo-orange: (
         800 : #000000,
         900 : #000000,
         A100 : #000000,
-        A200 : #000000,
+        A200 : #ffffff,
         A400 : #000000,
         A700 : #000000,
     )
