--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -298,6 +298,10 @@
         <h2 class="header_title" *ngIf="!orderId">New Order</h2>
         <h2 class="header_title" *ngIf="orderId">Edit Order : {{orderId}}</h2>
 
+        <div class="order_timeBox ml-auto">
+            <p><span>From:</span> {{orderData?.bearer.firstName}} {{orderData?.bearer.lastName}} <span class="ml-15">At: </span> {{orderData?.created_at | datex:'DD-MM-YYYY hh:mm a'}}</p>
+        </div>
+
         <div *ngIf="orderData?.rejectedCount > 0 && orderData?.orderStatus == 'new'" class="status_box red">
             Items Rejected
         </div>
@@ -335,7 +339,7 @@
           </div>
     </div>
     
-    <div class="order_layout">
+    <div class="order_layout scroll_style">
         <div class="customer_section">
             <h2 class="header_title">Customer Details</h2>
             <div class="row">
@@ -409,6 +413,7 @@
                     <button mat-stroked-button color="primary" class="my-10 ew-mn-120 mx-auto" 
                         *ngIf="form.get('orderStatus').value != 'completed' && form.get('orderStatus').value != 'cancelled' && !blockForms"  
                         (click)="saveOrder('confirm')">Save</button>
+                        
                 </div>
 
             </div>
@@ -418,7 +423,7 @@
                     (click)="saveOrder('complete')">Complete</button>
 
 
-                <button mat-raised-button color="accent" *ngIf="form.get('orderStatus').value == 'completed'" class="w-100 rounded-0" (click)="printOrder()">Print</button>
+                <button mat-raised-button color="accent" *ngIf="form.get('orderStatus').value == 'completed'" class="w-100 rounded-0" (click)="printOrder()"><mat-icon>print</mat-icon> Print</button>
 
                 <button mat-raised-button color="warn" 
                     *ngIf="orderId && form.get('orderStatus').value != 'completed' && form.get('orderStatus').value != 'cancelled' && !blockForms" 
@@ -442,7 +447,6 @@
             <ng-container *ngFor="let item of items['controls'];let i=index;">
                 <div class="row no-gutters order_item_wrapper">
                     <div class="col-auto">
-                        <span class="order_item_card_strip" *ngIf="item.get('isParcel').value">Parcel</span>
                         <div class="img_item">
                             <img *ngIf="item.get('featuredImage').value" [src]=" url + item.get('featuredImage').value" alt="">
                             <img *ngIf="!item.get('featuredImage').value" src="/assets/images/food.jpg" alt="">
@@ -450,8 +454,8 @@
                     </div>
                     <div class="col">
                         <div class="order_item_card" *ngIf="!item.get('deletedFlag').value">
-                            <div class="order-details">
-                                <p class="product_name">{{ item.get('productName').value }}</p>
+                            <div class="order-details col">
+                                <p class="product_name">{{ item.get('productName').value }} <span class="order_item_card_strip" *ngIf="item.get('isParcel').value">Parcel</span></p>
                                 <p class="product_price">
                                     <small>Price: &nbsp;&nbsp;&nbsp;</small>
                                     <span>{{ item.get('price').value | currency  }}</span>
@@ -466,8 +470,8 @@
                                 </p>
                                 <button type="button" mat-stroked-button color="warn" class="mt-15" *ngIf="item.get('productionRejectedQuantity').value > 0" (click)="handleRejectedItems(item)">Remove Rejected</button>
                             </div>
-                            <div class="action_menu">
-                                <div class="input-group mb-0 number_input">
+                            <div class="action_menu col-auto">
+                                <div class="input-group mb-0 ml-auto number_input">
                                     <div class="input-group-prepend">
                                         <button class="btn btn-outline-secondary" type="button" (click)="handleNumberControl(item, 'prev', i)">-</button>
                                     </div>
@@ -476,9 +480,11 @@
                                         <button class="btn btn-outline-secondary" type="button" (click)="handleNumberControl(item, 'next', i)">+</button>
                                     </div>
                                 </div>
-                                <p class="text-success mt-2 mb-0">Served: <b>{{ item.get('servedItems').value }}</b></p>
-                                <p class="text-accent mb-0">Kitchen: <b>{{ item.get('quantity').value - item.get('servedItems').value - item.get('productionRejectedQuantity').value}}</b></p>
-                                <p class="text-danger mb-0">Rejected: <b>{{ item.get('productionRejectedQuantity').value }}</b></p>
+                                <div class="d-flex mt-15">
+                                    <p class="text-success px-2 mb-0">Served: <b>{{ item.get('servedItems').value }}</b></p>
+                                    <p class="text-accent px-2 mb-0">Kitchen: <b>{{ item.get('quantity').value - item.get('servedItems').value - item.get('productionRejectedQuantity').value}}</b></p>
+                                    <p class="text-danger pl-2 mb-0">Rejected: <b>{{ item.get('productionRejectedQuantity').value }}</b></p>
+                                </div>
                             </div>
                         </div>
                     </div>
