--- a/src/app/admin/orders/components/new-order/new-order.component.scss
+++ b/src/app/admin/orders/components/new-order/new-order.component.scss
@@ -31,6 +31,24 @@
 //         }
 //     }
 // }
+
+.page_header{
+    .order_timeBox{    
+        margin-right: 10px;
+        background: #2e358e0d;
+        padding: 5px 15px;
+        border-radius: 15px;
+        color: #2e358e;
+        p{
+            margin-bottom: 0px;
+            font-weight: 500;
+            span{
+                font-weight: 400;
+                display: inline-block;
+            }
+        }
+    }
+}
 .table_form_wrapper {
     & .order_typeRow {
         & .type_radio {
@@ -258,20 +276,18 @@
 
 .order_layout {
     height: calc(100vh - 220px);
-    border-radius: 5px;
+    // border-radius: 5px;
     overflow: hidden;
     background-color: rgba($color-primary, 0.1);
     background-color: #fff;
     display: grid;
     grid-template-columns: 1fr 300px;
     grid-auto-rows:110px auto;
-
-    
     grid-template-areas: 
             "customer billing"
             "order billing";
 
-    
+    overflow-y: auto;
     @media (max-width: 1325px) {
         grid-auto-rows:170px auto;
     }
@@ -372,9 +388,9 @@
         }
     }
     .order_item_card {
-        display: grid;
-        grid-template-columns: 1fr 120px;
-        grid-auto-rows: minmax(min-content, max-content);
+        display: flex;
+        // grid-template-columns: 1fr 120px;
+        // grid-auto-rows: minmax(min-content, max-content);
         background-color: #fff;
         box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
         border-radius: 5px;
@@ -382,16 +398,6 @@
     
         &:not(:last-child) {
             margin-bottom: 2rem;
-        }
-    
-        & .order_item_card_strip {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            padding: 0 5px;
-            background-color: rgba(#fff, 0.8);
-            font-size: 1rem;
-            color: $color-success;
         }
     
     
@@ -403,7 +409,18 @@
                 font-size: 16px;
                 font-weight: 500;
                 color: rgba(#000, 0.8);
-                margin-bottom: 5px;
+                margin-bottom: 7px;
+                display: flex;
+                align-items: center;
+                & .order_item_card_strip {
+                    padding: 3px 7px;
+                    background-color: rgba(255, 115, 0, 1);
+                    font-size: 1.2rem;
+                    line-height: 1;
+                    color: #fff;
+                    margin-left: 10px;
+                    border-radius: 3px;
+                }
             }
             & p.product_price {
                 margin: 0;
@@ -414,7 +431,7 @@
     
         & .action_menu {
             padding: 15px 15px 15px 0px;
-            
+            align-self: flex-end;
         }
     
     
