--- a/src/app/admin/orders/components/new-order/new-order.component.scss
+++ b/src/app/admin/orders/components/new-order/new-order.component.scss
@@ -84,6 +84,7 @@
         padding: 0px 10px;
         height: 90px;
         min-width: 150px;
+        margin-bottom: 40px;
         & .table_circle {
             display: block;
             position: absolute;
