--- a/src/app/admin/table-manager/table-manager.component.scss
+++ b/src/app/admin/table-manager/table-manager.component.scss
@@ -11,6 +11,7 @@
         max-width: 16.666%;
         padding: 0px 10px;
         height: 90px;
+        margin-bottom: 40px;
         min-width: 150px;
         & .table_circle {
             display: block;
