--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -54,6 +54,11 @@
                 </li>
             </ul>
         </li>
+        <li routerLinkActive="active">
+            <a href="javascript:;" routerLink="/admin/account-management" matRipple [matRippleUnbounded]="false">
+                <mat-icon>addchart</mat-icon> <span class="d-inline-block ml-3">Account Management </span>
+            </a>
+        </li>
         <!-- <li routerLinkActive="subOpen" class="have_submenu">
             <a href="javascript:;"  routerLink="/admin/account" (click)="openAccountMenu()" matRipple [matRippleUnbounded]="false">
                 <mat-icon>addchart</mat-icon> <span class="d-inline-block ml-3">Account </span>
