update account table design

--- a/src/app/admin/account-management/dashboard/dashboard.component.html
+++ b/src/app/admin/account-management/dashboard/dashboard.component.html
@@ -1,6 +1,48 @@
-<div class="accont_header_wrapping">
-
+<div class="accont_header_wrapping pa-25">
+  <h2 class="font-3_0 text-uppercase font-weight-600 mb-0">New Transaction</h2>
 </div>
-<div class="account_body_wrapper">
-    
+<div class="account_body_wrapper pl-25 pr-25">
+  <div class="item_table_outer mt-50">
+    <div class="table-responsive">
+      <table class="table account_table">
+        <thead>
+          <tr>
+            <th class="ew-50"></th>
+            <th class="">Item</th>
+            <th class="ew-150">Price</th>
+            <th class="ew-150">Quantity</th>
+            <th class="ew-150">Total</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <button mat-icon-button>
+                <mat-icon>delete_forever</mat-icon>
+              </button>
+            </td>
+            <td>Food itemss</td>
+            <td>230.00</td>
+            <td>2</td>
+            <td>2103</td>
+          </tr>
+          <tr>
+            <td>
+              <button mat-icon-button>
+                <mat-icon>delete_forever</mat-icon>
+              </button>
+            </td>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Food" value="">
+              </mat-form-field>
+            </td>
+            <td>230.00</td>
+            <td>2</td>
+            <td>2103</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>  
 </div>
