--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,9 @@ html, body {
     font-weight: 400;
     color: #3a3a3a;
 }
+.mat-elevation-z4{
+    box-shadow: 0px 3px 10px #CCCEE9;
+}
 .scroll_style{
     &::-webkit-scrollbar {
         width: 5px;
@@ -48,6 +51,9 @@ button:focus {
 .text-primary{
     color: $color-primary !important;
 }
+.text-primary-light{
+    color: rgba($color-primary, 0.5) !important;
+}
 .text-accent{
     color: $color-accent !important;
 }
@@ -59,6 +65,9 @@ button:focus {
     -ms-transition: .3s ease-in-out;
     -moz-transition: .3s ease-in-out;
     transition: .3s ease-in-out;
+}
+.title_h3{
+    font-size: 2.4rem !important;
 }
 h3.page_title {
     font-weight: 500;
@@ -227,39 +236,69 @@ mat-form-field{
 
 // ==================input box style edit ==========================
 .mat-form-field{
-    & .mat-form-field-wrapper{
-        & .mat-form-field-flex{
-            margin-top: 0px;
-            &:hover{
-                & .mat-form-field-outline-thick{
-                    color: $color-primary;
-                }
-            }
-            & .mat-form-field-infix{
-                // border-top: 0px;
-                border-top: 0px solid transparent;
-                padding: 10px 0px 12px;
-            }
-            
-        }
-        & .mat-form-field-outline{
-            top: 0;
-        }
-        & .mat-form-field-suffix{
-            top: .4em;
-            & .mat-icon-button{
-                width: 2em !important;
-                height: 2em !important;
-            }
-        }
-        
-        & .mat-select-arrow-wrapper{
-            transform: translateY(10%);
-        }
-    }
     &.mat-form-field-appearance-outline{
         & .mat-form-field-wrapper{
             margin: 0px 0;
+            & .mat-form-field-flex{
+                margin-top: 0px;
+                &:hover{
+                    & .mat-form-field-outline-thick{
+                        color: $color-primary;
+                    }
+                }
+                & .mat-form-field-infix{
+                    // border-top: 0px;
+                    border-top: 0px solid transparent;
+                    padding: 10px 0px 12px;
+                }
+                
+            }
+            & .mat-form-field-outline{
+                top: 0;
+            }
+            & .mat-form-field-suffix{
+                top: .4em;
+                & .mat-icon-button{
+                    width: 2em !important;
+                    height: 2em !important;
+                }
+            }
+            
+            & .mat-select-arrow-wrapper{
+                transform: translateY(10%);
+            }
+        }
+        &.mat-form-field-can-float{
+            &.mat-form-field-should-float {
+                & .mat-form-field-label{
+                    transform: translateY(-1.2em) scale(0.75);
+                }
+            }
+        }
+    }
+    &.mat-form-field-appearance-fill{
+        .mat-form-field-flex{
+            background-color: #EAEBF6;
+            border-radius: 0px;
+            padding: .3em .75em 0 .75em;
+            .mat-form-field-infix{
+                padding: 0.1em 0 0.4em 0;
+            }
+            .mat-form-field-prefix,
+            .mat-form-field-suffix{
+                .mat-icon-button{
+                    width: 2em;
+                    height: 2em;
+                }
+            }
+        }
+        .mat-form-field-underline{
+            &::before{
+                background-color: rgba(0, 0, 0, 0);
+            }
+            .mat-form-field-ripple{
+                background-color: #2e358e;
+            }
         }
     }
     &.field-pb-0{
@@ -267,10 +306,15 @@ mat-form-field{
            padding-bottom: 0px;
         }
     }
-    &.mat-form-field-can-float{
-        &.mat-form-field-should-float {
-            & .mat-form-field-label{
-                transform: translateY(-1.2em) scale(0.75);
+    &.table_select{
+        .mat-form-field-infix{
+            border-top: 0px;
+            padding: 3px 0px;
+        }
+        .mat-form-field-underline{
+            bottom: 0;
+            .mat-form-field-ripple{
+                height: 1px;
             }
         }
     }
@@ -285,7 +329,8 @@ mat-form-field{
     & .mat-slide-toggle-label {
         & .mat-slide-toggle-bar {
             height: 14px;
-            width: 23px;
+            // width: 23px;
+            width: 35px;
 
             & .mat-slide-toggle-thumb-container {
                 height: 8px;
@@ -310,6 +355,7 @@ mat-form-field{
 
                 & .mat-slide-toggle-thumb-container {
                     left: -3px;
+                    transform: translate3d(26px, 0, 0);
                 }
             }
 
@@ -453,4 +499,123 @@ table {
 
 label.mat-checkbox-layout {
     margin-bottom: 0px;
+}
+
+// inside table inputs
+.custom_input{
+    position: relative;
+    .suffix_text{
+        position: absolute;
+        right: 0;
+        z-index: 1;
+        height: 100%;
+        color: rgba($color-primary, 0.5);
+        font-size: 1.4rem;
+    }
+    .underline{
+        content: "";
+        position: absolute;
+        bottom: 0px;
+        height: 1px;
+        z-index: 1;
+        background-color: #2E358ED6;
+        width: 0px;
+        left: 50%;
+        -webkit-transition: .3s ease-in-out;
+        -moz-transition: .3s ease-in-out;
+        -ms-transition: .3s ease-in-out;
+        transition: .3s ease-in-out;
+        -webkit-transform: translateX(-50%);
+        -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+    }
+    input{
+        max-width: 100%;
+        border-radius: 0px;
+        background-color: transparent;
+        border: transparent;
+        border-bottom: 1px solid rgba(46, 52, 142, 0.173);
+        -webkit-transition: .3s ease-in-out;
+        -moz-transition: .3s ease-in-out;
+        -ms-transition: .3s ease-in-out;
+        transition: .3s ease-in-out;
+        &:focus{
+            outline: none;
+            box-shadow: none;
+            border-color: transparent;
+            &  + .underline{
+                width: 100%;
+            }
+        }
+    }   
+    &.suffix{
+        input{   
+            padding-right: 20px;
+        }
+    }
+    &.error_active{
+        .underline{
+            width: 100%;
+            background-color: $color-warning;
+        }
+        input{
+            color: $color-warning;
+        }
+    }
+}
+
+// table icon button edit
+.small_icon_btn{
+    &.mat-icon-button{
+        width: 25px;
+        height: 25px;
+        line-height: 25px;
+        .mat-icon{
+            height: 20px;
+            width: 20px;
+            font-size: 20px;
+            line-height: 1;
+        }
+    }
+}
+
+.dropdown_small{
+    .mat-menu-item{
+        line-height: 35px;
+        height: 35px;
+    }
+}
+
+.status_chip{
+    display: inline-flex;
+    padding: 5px 12px;
+    position: relative;
+    border-radius: 6px;
+    font-size: 10px;
+    align-items: center;
+    line-height: 1;
+    &::before{
+        content: "";
+        position: relative;
+        width: 7px;
+        height: 7px;
+        border-radius: 50%;
+        border: 1px solid #fff;
+        margin-right: 7px;
+    }
+    &.active{
+        background-color: rgba($color-success, 0.3);
+        color: $color-success;
+        &::before{
+            background-color: $color-success;
+        }
+    }
+    &.inactive{
+        background-color: rgba($color-warning, 0.3);
+        color: $color-warning;
+        &::before{
+            background-color: $color-warning;
+        }
+    }
 }
