--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -54,11 +54,34 @@
                 </li>
             </ul>
         </li>
-        <li routerLinkActive="active">
+        <li routerLinkActive="subOpen" class="have_submenu">
+            <a href="javascript:;" routerLink="/admin/account-management" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
+                <mat-icon>addchart</mat-icon> <span class="d-inline-block ml-3">Accounts </span>
+                <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon>
+            </a>
+            <ul routerLinkActive="active" class="list-unlisted submenu-Wrapper">
+                <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/account-management/dashboard" matRipple>
+                        Dashboard
+                    </a>
+                </li>
+                <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/account-management/new-transaction" matRipple>
+                        New Transaction
+                    </a>
+                </li>
+                <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/account-management/masters" matRipple>
+                        Masters
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <!-- <li routerLinkActive="active">
             <a href="javascript:;" routerLink="/admin/account-management" matRipple [matRippleUnbounded]="false">
                 <mat-icon>addchart</mat-icon> <span class="d-inline-block ml-3">Account Management </span>
             </a>
-        </li>
+        </li> -->
         <!-- <li routerLinkActive="subOpen" class="have_submenu">
             <a href="javascript:;"  routerLink="/admin/account" (click)="openAccountMenu()" matRipple [matRippleUnbounded]="false">
                 <mat-icon>addchart</mat-icon> <span class="d-inline-block ml-3">Account </span>
