--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -38,6 +38,11 @@
             </a>
             <ul routerLinkActive="active" class="list-unlisted submenu-Wrapper">
                 <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/settings/company" matRipple>
+                        Company
+                    </a>
+                </li>
+                <li routerLinkActive="active">
                     <a href="javascript:;" routerLink="/admin/settings/branches" matRipple>
                         Branches
                     </a>
