--- a/src/app/admin/settings/company-setting/company-setting.component.html
+++ b/src/app/admin/settings/company-setting/company-setting.component.html
@@ -1,6 +1,6 @@
 <div class="accont_header_wrapping pa-25">
     <h2 class="text-uppercase font-weight-500 mb-0 d-flex align-items-center justify-content-between">
-        Users
+        Setting
         <!-- <div>
             <button mat-raised-button color="primary" routerLink="/admin/settings/company/update">Add New</button>
         </div> -->
@@ -9,11 +9,11 @@
 <div class="account_body_wrapper pl-25 pr-25">
     <div class="body_inner_card">
         <div class="tab_header">
-            <div class="tab_btn" routerLink="/admin/user/list" routerLinkActive="active">
-                <a href="javascript:;">User Lists</a>
+            <div class="tab_btn" routerLink="/admin/settings/company/list" routerLinkActive="active">
+                <a href="javascript:;">Company</a>
             </div>
-            <div class="tab_btn" routerLink="/admin/user/update" routerLinkActive="active pointer-none">
-                <a href="javascript:;">{{editId?'Update User': 'Add User'}} </a>
+            <div class="tab_btn" routerLink="/admin/settings/company/update" routerLinkActive="active pointer-none">
+                <a href="javascript:;">{{editId?'Update Company': 'Add Company'}} </a>
             </div>
             <!--<div class="tab_btn">
                 <a href="javascript:;">Unit</a>
