--- a/src/app/admin/account-management/dashboard/dashboard.component.scss
+++ b/src/app/admin/account-management/dashboard/dashboard.component.scss
@@ -1,32 +1,66 @@
-.accont_header_wrapping{
-    min-height: 150px;
-    background-color: #cbcde3;
+.chart_outer{
+    margin-bottom: -60px !important;
+    overflow: hidden;
 }
-.account_body_wrapper{
-    margin-top: -55px;
+.dash_header{
+    h3{
+        font-size: 2rem;
+        font-weight: 500;
+        text-transform: uppercase;
+    }
 }
-.account_table{
-    thead{
-        tr{
-            th{
-                background-color: rgba(211, 212, 225, 0.122);
-                border-bottom:5px solid transparent;
-                border-top: none;
-                color: rgba(46, 53, 142, 0.549);
-                padding: 1.5rem;
-                font-size: 1.8rem;
-                font-weight: 500;
-            }
+.right_status_outer{
+    width: 400px;
+    .list_header{
+        h3{
+            font-size: 2rem;
+            font-weight: 500;
+            text-transform: uppercase;
         }
     }
-    tbody{
-        tr{
-            td{
-                vertical-align: middle;
-                border-bottom: 5px solid transparent;
-                background-color: #fff;
-                padding: 1.5rem;
+    .list_ul{
+        li{
+            padding: 1rem 1.5rem;
+            &:nth-child(even){
+                background-color: #f2f2f2;
+            }
+            h4{
                 font-size: 1.6rem;
+                font-weight: 500;
+                .tag{
+                    display: inline-block;
+                    border-radius: 5px;
+                    padding: 3px 10px;
+                    line-height: 1.2;
+                    font-weight: 500;
+                    font-size: 1.2rem;
+                    margin-right: 5px;
+                    &.sales{
+                        color: #2e358e;
+                        background-color: rgba(54, 0, 241, 0.349);
+                        box-shadow: 0px 2px 5px -1px rgba(177, 158, 242,0.53%);
+                    }
+                    &.purchase{
+                        color: #8e2e2e;
+                        background-color: rgba(241, 0, 0, 0.349);
+                        box-shadow: 0px 2px 5px -1px rgba(177, 158, 242,0.53%);
+                    }
+                    &.payment{
+                        color: #368e2e;
+                        background-color: rgba(0, 241, 20, 0.349);
+                        box-shadow: 0px 2px 5px -1px rgba(177, 158, 242,0.53%);
+                    }
+                    &.recipt{
+                        color: #2e8b8e;
+                        background-color: rgba(0, 241, 229, 0.349);
+                        box-shadow: 0px 2px 5px -1px rgba(177, 158, 242,0.53%);
+                    }
+                }
+            }
+            p{
+                font-size: 1.2rem;
+                margin-bottom: 0px;
+                color: #161616;
             }
         }
     }
