--- a/src/styles.scss
+++ b/src/styles.scss
@@ -718,3 +718,83 @@ label.mat-checkbox-layout {
         }
     }
 }
+
+.dash_card{
+    box-shadow: 0px 3px 10px #CCCEE9 !important;
+    h1{
+        font-size: 3.4rem;
+    }
+}
+.radio_toggle{
+    display: inline-flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 26px;
+    background-color: rgba($color-primary, 0.3);
+    .radioBox{
+        position: relative;
+        overflow: hidden;
+        label{
+            padding: 5px 16px;
+            font-size: 1.6rem;
+            line-height: 1.5;
+            display: block;
+            cursor: pointer;
+            color: $color-primary;
+            margin-bottom: 0px;
+            -webkit-transition: .3s ease-in-out;
+                -ms-transition: .3s ease-in-out;
+                -moz-transition: .3s ease-in-out;
+                transition: .3s ease-in-out;    
+            &:after{
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                border-radius: 26px;
+                top: 0;
+                z-index: 1;
+                -webkit-transition: .3s ease-in-out;
+                -ms-transition: .3s ease-in-out;
+                -moz-transition: .3s ease-in-out;
+                transition: .3s ease-in-out;    
+                background-color: $color-primary;
+            }
+            &.valueOne{
+                &:after{
+                    left: 100%;
+                }
+            }
+            &.valueTwo{
+                &:after{
+                    right: 100%;
+                }
+            }
+            p{
+                position: relative;
+                margin-bottom: 0px;
+                z-index: 2;
+            }
+        }
+        input[type="radio"]{
+            opacity: 0;
+            position: absolute;
+            visibility: hidden;
+            &:checked + label{
+                color: #fff;
+                &.valueOne{
+                    &:after{
+                        left: 0%;
+                    }
+                }
+                &.valueTwo{
+                    &:after{
+                        right: 0%;
+                    }
+                }
+            }
+        }
+
+    }
+}
